titel main layout

--- a/src/pages/winners.astro
+++ b/src/pages/winners.astro
@@ -7,7 +7,7 @@ import Heading from "../components/Heading.astro";
 import Text from "../components/Text.astro";
 import Button from "../components/Button.astro";
 ---
-<MainLayout title="Titel">
+<MainLayout title="Winners">
       <!-- Noise overlay -->
   <div 
   class="pointer-events-none fixed inset-0 z-[9999] mix-blend-multiply opacity-100"
