--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -8,7 +8,7 @@ import Text from "../components/Text.astro";
 import Button from "../components/Button.astro";
 import PersonBuilder from "../components/PersonBuilder.astro";
 ---
-<MainLayout title="Titel">
+<MainLayout title="About">
       <!-- Noise overlay -->
   <div 
   class="pointer-events-none fixed inset-0 z-[9999] mix-blend-multiply opacity-100"
