--- a/src/pages/winners.astro
+++ b/src/pages/winners.astro
@@ -31,8 +31,8 @@ import Button from "../components/Button.astro";
     </section>
      <section class="bg-[url(/images/winner_bg.png)] bg-cover relative">
         <div class="mx-auto max-w-screen-lg px-4 grid grid-cols-12 gap-y-0 py-20">
-           <Heading htmlheading="h3" size="small_dark" font="h3_dark" stylingclasses="col-start-4 col-span-8 intersect:animate-fade-left intersect:duration-4000">The winner</Heading>
-           <Heading htmlheading="h4" size="xsmall" font="h4" stylingclasses="col-start-8 col-span-3 -mt-2 lg:-mt-5">of 2025!</Heading>
+           <Heading htmlheading="h3" size="small_dark" font="h3_dark" stylingclasses="col-start-4 col-span-8 intersect:animate-fade-left intersect:duration-3000">The winner</Heading>
+           <Heading htmlheading="h4" size="xsmall" font="h4" stylingclasses="col-start-8 col-span-3 -mt-2 lg:-mt-5 intersect:animate-fade-right intersect:duration-3000">of 2025!</Heading>
            <img src="/images/winner_img.png" alt="winner_instant" class="z-20 pt-8 lg:pt-15 col-start-2 col-span-7 w-full max-w-full h-auto filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110"
   >
            <img src="/images/winner_description.png" alt="winer_description" class="absolute w-60 lg:w-120 left-45 lg:left-170 bottom-30 lg:bottom-50 -rotate-5"
@@ -41,13 +41,13 @@ import Button from "../components/Button.astro";
     </section>
  <section class="mx-auto max-w-screen-lg px-4 grid grid-cols-12 gap-y-0 py-20">
   <!-- Overskrifter -->
-  <Heading htmlheading="h4" size="xsmall" font="h4" stylingclasses="col-start-4 col-span-8">
+  <Heading htmlheading="h4" size="xsmall" font="h4" stylingclasses="col-start-4 col-span-8 fadeup1">
     It was hard to choose but...
   </Heading>
-  <Heading htmlheading="h3" size="small_light" font="h3_light" stylingclasses="col-start-2 col-span-11 fadeinanimationfravenstre1 text-center">
+  <Heading htmlheading="h3" size="small_light" font="h3_light" stylingclasses="col-start-2 col-span-11 fadeinleft1 text-center">
     here are the Best
   </Heading>
- <Heading htmlheading="h3" size="small_light" font="h3_light" stylingclasses="col-start-2 col-span-11 -mt-3 lg:-mt-8 fadeinanimationfravenstre2 text-center">
+ <Heading htmlheading="h3" size="small_light" font="h3_light" stylingclasses="col-start-2 col-span-11 -mt-3 lg:-mt-8 fadeinright2 text-center">
     of 2025 - nominees:
   </Heading></div>
 
@@ -55,7 +55,7 @@ import Button from "../components/Button.astro";
   <div class="group [perspective:1000px] col-start-3 col-span-3 lg:col-start-2 lg:col-span-3 cursor-pointer">
     <div class="relative w-full aspect-[3/4] transition-transform duration-700 [transform-style:preserve-3d] group-[.flipped]:[transform:rotateY(180deg)]">
       <!-- Forside -->
-      <div class="absolute inset-0 [backface-visibility:hidden] intersect:animate-fade-left intersect:duration-3000">
+      <div class="absolute inset-0 [backface-visibility:hidden">
         <img src="/images/nominees_1.jpg" alt="nominee 1"
           class="w-full h-full object-cover pt-10 lg:pt-25 filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110 -rotate-6">
       </div>
@@ -70,7 +70,7 @@ import Button from "../components/Button.astro";
 
   <div class="group [perspective:1000px] col-start-8 col-span-3 lg:col-start-6 lg:col-span-3 cursor-pointer">
     <div class="relative w-full aspect-[3/4] transition-transform duration-700 [transform-style:preserve-3d] group-[.flipped]:[transform:rotateY(180deg)]">
-      <div class="absolute inset-0 [backface-visibility:hidden] intersect:animate-fade-left intersect:duration-3000">
+      <div class="absolute inset-0 [backface-visibility:hidden">
         <img src="/images/nominees_2.jpg" alt="nominee 2"
           class="w-full h-full object-cove pt-10 lg:pt-25 filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110 rotate-8">
       </div>
@@ -83,7 +83,7 @@ import Button from "../components/Button.astro";
 
   <div class="group [perspective:1000px] col-start-3 col-span-3 lg:col-start-10 lg:col-span-3 cursor-pointer">
     <div class="relative w-full aspect-[3/4] transition-transform duration-700 [transform-style:preserve-3d] group-[.flipped]:[transform:rotateY(180deg)]">
-      <div class="absolute inset-0 [backface-visibility:hidden] intersect:animate-fade-left intersect:duration-3000">
+      <div class="absolute inset-0 [backface-visibility:hidden">
         <img src="/images/nominees_3.jpg" alt="nominee 3"
           class="w-full h-full object-cover pt-10 lg:pt-25 grayscale hover:grayscale-0 transition duration-300 hover:scale-110 -rotate-10">
       </div>
@@ -96,7 +96,7 @@ import Button from "../components/Button.astro";
 
   <div class="group [perspective:1000px] col-start-8 col-span-3 lg:col-start-2 lg:col-span-3 cursor-pointer">
     <div class="relative w-full aspect-[3/4] transition-transform duration-700 [transform-style:preserve-3d] group-[.flipped]:[transform:rotateY(180deg)]">
-      <div class="absolute inset-0 [backface-visibility:hidden] intersect:animate-fade-right intersect:duration-3000">
+      <div class="absolute inset-0 [backface-visibility:hidden]">
         <img src="/images/nominees_4.jpg" alt="nominee 4"
           class="w-full h-full object-cover pt-10 lg:pt-25 filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110 rotate-10">
       </div>
@@ -109,7 +109,7 @@ import Button from "../components/Button.astro";
 
   <div class="group [perspective:1000px] col-start-3 col-span-3 lg:col-start-6 lg:col-span-3 cursor-pointer">
     <div class="relative w-full aspect-[3/4] transition-transform duration-700 [transform-style:preserve-3d] group-[.flipped]:[transform:rotateY(180deg)]">
-      <div class="absolute inset-0 [backface-visibility:hidden intersect:animate-fade-right intersect:duration-3000">
+      <div class="absolute inset-0 [backface-visibility:hidden">
         <img src="/images/nominees_5.jpg" alt="nominee 5"
           class="w-full h-full object-cover pt-10 lg:pt-25 filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110 -rotate-3">
       </div>
@@ -122,7 +122,7 @@ import Button from "../components/Button.astro";
 
   <div class="group [perspective:1000px] col-start-8 col-span-3 lg:col-start-10 lg:col-span-3 cursor-pointer">
     <div class="relative w-full aspect-[3/4] transition-transform duration-700 [transform-style:preserve-3d] group-[.flipped]:[transform:rotateY(180deg)]">
-      <div class="absolute inset-0 [backface-visibility:hidden] intersect:animate-fade-right intersect:duration-3000">
+      <div class="absolute inset-0 [backface-visibility:hidden]">
         <img src="/images/nominees_6.png" alt="nominee 6"
           class="w-full h-full object-cover pt-10 lg:pt-25 filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110 rotate-8">
       </div>
@@ -159,11 +159,16 @@ import Button from "../components/Button.astro";
   /* Import af Motion One bibliotek */
 	import { animate, stagger, inView, scroll, } from "motion";
   /* slider heading element ind */
-  inView( ".fadeinanimationfravenstre1" , () =>{
-	animate( ".fadeinanimationfravenstre1", { x: [-2000, 0 ] }, { duration: 2})
+  inView( ".fadeinleft1" , () =>{
+	animate( ".fadeinleft1", { x: [-2000, 0 ] }, { duration: 1.5})
 	})
 
-  inView( ".fadeinanimationfravenstre2" , () =>{
-	animate( ".fadeinanimationfravenstre2", { x: [2000, 0 ] }, { duration: 2})
+  inView( ".fadeinright2" , () =>{
+	animate( ".fadeinright2", { x: [2000, 0 ] }, { duration: 1.5})
 	})
-</script>
+
+   inView( ".fadeup1" , () =>{
+	animate( ".fadeup1", { y: [2000, 0 ] }, { duration: 0.5})
+	})
+
+</script> 
